# Routes/Product.js
@@ -6,11 +6,13 @@ const {
   getOne,
   deleteOne,
   getAllByCategory,
+  searchProduct,
 } = require("../Controllers/Product");
 const ProtectedRoute = require("../Utils/ProtectedRoute");
 const router = express.Router();
 
 router.route("/").post(ProtectedRoute, create).get(getAll);
+router.route("/search").get(searchProduct);
 
 router.route("/category/:_id").get(getAllByCategory);
 
